crates/parser/src/tests/snapshots/kclvm_parser__tests__error_recovery__number_literal_recovery_10.snap
---
source: parser/src/tests/error_recovery.rs
assertion_line: 20
expression: "crate::tests::parsing_expr_string(\"100mm\")"
---
Node {
    node: NumberLit(
        NumberLit {
            binary_suffix: None,
            value: Int(
                100,
            ),
        },
    ),
    filename: "",
    line: 1,
    column: 0,
    end_line: 1,
    end_column: 5,
}

