crates/parser/src/tests/snapshots/kclvm_parser__tests__error_recovery__number_literal_recovery_9.snap
---
source: parser/src/tests/error_recovery.rs
assertion_line: 19
expression: "crate::tests::parsing_expr_string(\"10KI\")"
---
Node {
    node: NumberLit(
        NumberLit {
            binary_suffix: None,
            value: Int(
                10,
            ),
        },
    ),
    filename: "",
    line: 1,
    column: 0,
    end_line: 1,
    end_column: 4,
}

