crates/parser/src/tests/snapshots/kclvm_parser__tests__error_recovery__rule_stmt_recovery_0.snap
---
source: parser/src/tests/error_recovery.rs
expression: "crate::tests::parsing_module_string(r#\"rule\"#)"
---
Module {
    filename: "",
    doc: None,
    body: [
        Node {
            node: Rule(
                RuleStmt {
                    doc: None,
                    name: Node {
                        node: "",
                        filename: "",
                        line: 1,
                        column: 4,
                        end_line: 1,
                        end_column: 4,
                    },
                    parent_rules: [],
                    decorators: [],
                    checks: [],
                    args: None,
                    for_host_name: None,
                },
            ),
            filename: "",
            line: 1,
            column: 0,
            end_line: 1,
            end_column: 4,
        },
    ],
    comments: [],
}
